--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,79 @@
-.results {
+body {
+    margin: 0; /* Remove default margin */
+    font-family: Arial, sans-serif; /* Optional: Set desired font */
+    background-color: #f0f0f0; /* Optional: Set background color */
+}
+
+h1 {
+  text-align: center;
+}
+
+.btn-field{
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
-    margin-top: 20px;
+    align-items: center;
+}
+
+
+.searchInput {
+  width: 300px; /* Set width of the input field */
+  padding: 10px; /* Add padding inside the input field */
+  font-size: 16px; /* Set font size */
+  border: 1px solid #ccc; /* Add border with color */
+  border-radius: 4px; /* Add rounded corners */
+  outline: none; /* Remove outline when focused */
+  transition: border-color 0.2s ease-in-out; /* Smooth transition for border color */
+  margin-right: 10px;
+}
+
+.searchInput:focus {
+  border-color: #007bff;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+.btn-search {
+  padding: 10px 20px; 
+  font-size: 16px; 
+  border: none; 
+  background-color: #007bff; 
+  color: #fff; 
+  border-radius: 4px; 
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out; 
+}
+
+.btn-search:hover {
+  background-color: #0056b3;
+}
+
+.message {
+  margin-top: 20px; 
+  text-align: center;
+}
+.results {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 20px;
 }
 
 .gif-container {
-    flex: 0 0 calc(25% - 20px);
-    margin: 10px;
-    text-align: center;
-    box-sizing: border-box; 
+  flex: 0 0 calc(25% - 20px);
+  margin: 10px;
+  text-align: center;
+  box-sizing: border-box;
 }
 
 .gif-container img {
-    width: 100%;
-    height: 200px; 
-    object-fit: cover;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .gif-container p {
-    margin-top: 10px;
-    font-size: 14px;
-    color: #333;
+  margin-top: 10px;
+  font-size: 14px;
+  color: #333;
 }
-
