--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,62 @@
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #000;
+  height: 65px;
+  border-bottom: 1px solid black;
+}
+
+.nav-menu {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.nav-item {
+  margin: 0 20px; /* Adjust margin as needed */
+}
+
+.nav-item a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 20px;
+}
+
+.logo {
+  color: #fff;
+  text-decoration: none;
+  margin: 15px;
+  font-weight: bold;
+  font-size: 30px; /* Adjust font size as needed */
+}
+
+/* Default styles for main content */
 body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0; 
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #000;
+  color: #fff;
 }
 
 h1 {
   text-align: center;
+  margin-top: 50px;
 }
 
-.btn-field{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.btn-field {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
 }
-
 
 .searchInput {
-  width: 300px; 
-  padding: 10px; 
+  width: 300px;
+  padding: 10px;
   font-size: 16px;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -32,14 +71,14 @@ h1 {
 }
 
 .btn-search {
-  padding: 10px 20px; 
-  font-size: 16px; 
-  border: none; 
-  background-color: #007bff; 
-  color: #fff; 
-  border-radius: 4px; 
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  background-color: #007bff;
+  color: #fff;
+  border-radius: 4px;
   cursor: pointer;
-  transition: background-color 0.2s ease-in-out; 
+  transition: background-color 0.2s ease-in-out;
 }
 
 .btn-search:hover {
@@ -47,14 +86,19 @@ h1 {
 }
 
 .message {
-  margin-top: 20px; 
+  margin-top: 20px;
   text-align: center;
 }
+
+.count {
+  text-align: center;
+}
+
 .results {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: 20px;
+  margin: 20px;
 }
 
 .gif-container {
@@ -76,4 +120,51 @@ h1 {
   margin-top: 10px;
   font-size: 14px;
   color: #333;
+}
+
+@media (max-width: 320px) {
+  .nav-bar {
+    flex-direction: column;
+    align-items: flex-start;
+    height: auto; 
+  }
+
+  .nav-menu {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .nav-item {
+    margin: 10px;
+  }
+
+  .logo {
+    font-size: 24px; 
+    margin-left: 10px;
+  }
+
+  h1 {
+    text-align: center;
+    margin-top: 20px;
+  }
+
+  .btn-field {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .searchInput {
+    width: calc(100% - 20px);
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+
+.gif-container {
+  display: flex;
+  flex-direction: column;
+  flex: 0 0 calc(100% - 20px);
+  margin: 10px;
+  text-align: center;
+  box-sizing: border-box;
+}
 }
