--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
   align-items: center;
   background-color: #000;
   height: 65px;
-  border-bottom: 1px solid black;
+  border-bottom: 0.3px solid white;
 }
 
 .nav-menu {
@@ -17,13 +17,57 @@
 }
 
 .nav-item {
-  margin: 0 20px; /* Adjust margin as needed */
+  margin: 0 20px;
 }
 
 .nav-item a {
   text-decoration: none;
   color: #fff;
   font-size: 20px;
+  padding: 0px;
+  margin-right: 20px;
+}
+
+.nav-item {
+  position: relative; 
+  margin-right: 20px;
+}
+
+.nav-item:last-child {
+  margin-right: 0;
+}
+
+.nav-link {
+  text-decoration: none;
+  color: #fff;
+  font-size: 16px;
+  display: block;
+  padding: 10px 15px;
+}
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #333;
+  min-width: 160px;
+  z-index: 1000;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
+
+.dropdown-menu a {
+  color: #fff;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-menu a:hover {
+  background-color: #555;
+}
+
+.dropdown:hover .dropdown-menu {
+  display: block;
 }
 
 .logo {
@@ -31,20 +75,24 @@
   text-decoration: none;
   margin: 15px;
   font-weight: bold;
-  font-size: 30px; /* Adjust font size as needed */
+  font-size: 30px;
+  font-size: 48px;
+  background: linear-gradient(to right, #ffcc00, #ff6666);
+  -webkit-background-clip: text;
+  color: transparent;
 }
 
-/* Default styles for main content */
 body {
+  font-family: "Wittgenstein", serif;
   margin: 0;
-  font-family: Arial, sans-serif;
-  background-color: #000;
-  color: #fff;
-}
-
+  background: linear-gradient(to right, #06022f, #850a33);}
 h1 {
   text-align: center;
   margin-top: 50px;
+  background: linear-gradient(178deg, #3c9bff, #00141f 100px);
+  -webkit-background-clip: text;
+  color: transparent;
+  font-size: 50px;
 }
 
 .btn-field {
@@ -119,14 +167,18 @@ h1 {
 .gif-container p {
   margin-top: 10px;
   font-size: 14px;
-  color: #333;
+  color: #cac5c5;
 }
 
 @media (max-width: 320px) {
+
+body{
+  background: linear-gradient(to right, #06022f, #850a33);
+}
   .nav-bar {
     flex-direction: column;
     align-items: flex-start;
-    height: auto; 
+    height: auto;
   }
 
   .nav-menu {
@@ -139,13 +191,16 @@ h1 {
   }
 
   .logo {
-    font-size: 24px; 
+    font-size: 24px;
     margin-left: 10px;
   }
 
   h1 {
     text-align: center;
     margin-top: 20px;
+    background: linear-gradient(166deg, #3c9bff, #00141f 100px);
+    -webkit-background-clip: text;
+    color: transparent;
   }
 
   .btn-field {
@@ -159,12 +214,12 @@ h1 {
     margin-bottom: 10px;
   }
 
-.gif-container {
-  display: flex;
-  flex-direction: column;
-  flex: 0 0 calc(100% - 20px);
-  margin: 10px;
-  text-align: center;
-  box-sizing: border-box;
-}
+  .gif-container {
+    display: flex;
+    flex-direction: column;
+    flex: 0 0 calc(100% - 20px);
+    margin: 10px;
+    text-align: center;
+    box-sizing: border-box;
+  }
 }
