--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,9 @@
 
 .nav-item {
   margin: 0 20px;
+  position: relative;
+  margin-right: 20px;
 }
-
 .nav-item a {
   text-decoration: none;
   color: #fff;
@@ -27,12 +28,6 @@
   padding: 0px;
   margin-right: 20px;
 }
-
-.nav-item {
-  position: relative; 
-  margin-right: 20px;
-}
-
 .nav-item:last-child {
   margin-right: 0;
 }
@@ -44,6 +39,7 @@
   display: block;
   padding: 10px 15px;
 }
+
 .dropdown-menu {
   display: none;
   position: absolute;
@@ -54,14 +50,12 @@
   z-index: 1000;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
-
 .dropdown-menu a {
   color: #fff;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
 }
-
 .dropdown-menu a:hover {
   background-color: #555;
 }
@@ -75,7 +69,6 @@
   text-decoration: none;
   margin: 15px;
   font-weight: bold;
-  font-size: 30px;
   font-size: 48px;
   background: linear-gradient(to right, #ffcc00, #ff6666);
   background-clip: text;
@@ -85,7 +78,9 @@
 body {
   font-family: "Wittgenstein", serif;
   margin: 0;
-  background: linear-gradient(to right, #06022f, #850a33);}
+  background: linear-gradient(to right, #06022f, #850a33);
+}
+
 h1 {
   text-align: center;
   margin-top: 50px;
@@ -112,7 +107,6 @@ h1 {
   transition: border-color 0.2s ease-in-out;
   margin-right: 10px;
 }
-
 .searchInput:focus {
   border-color: #007bff;
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
@@ -128,20 +122,14 @@ h1 {
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
 }
-
 .btn-search:hover {
   background-color: #0056b3;
 }
 
-.message {
+.message, .count {
   margin-top: 20px;
   text-align: center;
-  color: white;
-}
-
-.count {
-  text-align: center;
-  color: white;
+  color: #fff;
 }
 
 .results {
@@ -157,7 +145,6 @@ h1 {
   text-align: center;
   box-sizing: border-box;
 }
-
 .gif-container img {
   width: 100%;
   height: 200px;
@@ -165,7 +152,6 @@ h1 {
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
-
 .gif-container p {
   margin-top: 10px;
   font-size: 14px;
@@ -173,30 +159,25 @@ h1 {
 }
 
 @media (max-width: 720px) {
-
-body{
-  background: linear-gradient(to right, #06022f, #850a33);
-}
+  body {
+    background: linear-gradient(to right, #06022f, #850a33);
+  }
   .nav-bar {
     flex-direction: column;
     align-items: flex-start;
     height: auto;
   }
-
   .nav-menu {
     flex-direction: column;
     align-items: flex-start;
   }
-
   .nav-item {
     margin: 10px;
   }
-
   .logo {
     font-size: 24px;
     margin-left: 10px;
   }
-
   h1 {
     text-align: center;
     margin-top: 20px;
@@ -204,18 +185,15 @@ body{
     background-clip: text;
     color: transparent;
   }
-
   .btn-field {
     flex-direction: column;
     align-items: center;
   }
-
   .searchInput {
     width: calc(100% - 20px);
     margin-right: 0;
     margin-bottom: 10px;
   }
-
   .gif-container {
     display: flex;
     flex-direction: column;
@@ -225,3 +203,5 @@ body{
     box-sizing: border-box;
   }
 }
+
+/*# sourceMappingURL=style.css.map */
