--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .nav-bar {
   display: flex;
   justify-content: space-between;
@@ -77,6 +76,9 @@
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   font-family: "Wittgenstein", serif;
   margin: 0;
   background: linear-gradient(to right, #06022f, #850a33);
@@ -127,7 +129,8 @@ h1 {
   background-color: #0056b3;
 }
 
-.message, .count {
+.message,
+.count {
   margin-top: 20px;
   text-align: center;
   color: #fff;
@@ -138,6 +141,7 @@ h1 {
   flex-wrap: wrap;
   justify-content: center;
   margin: 20px;
+  flex: 1;
 }
 
 .gif-container {
@@ -159,8 +163,28 @@ h1 {
   color: #cac5c5;
 }
 
+.footer {
+  margin-top: auto;
+  background-color: #000000;
+  color: #fff;
+  text-align: center;
+  padding: 10px;
+  border-top: 0.1px solid white;
+}
+
+.footer h2 {
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  font-size: 15px;
+}
+
 @media (max-width: 720px) {
   body {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     background: linear-gradient(to right, #06022f, #850a33);
   }
   .nav-bar {
@@ -205,22 +229,36 @@ h1 {
   }
   .dropdown-menu {
     position: static;
-    display: none; 
+    display: none;
     background-color: #333;
-    box-shadow: none; 
-    border-top: 1px solid #666; 
-    margin-top: 5px; 
+    box-shadow: none;
+    border-top: 1px solid #666;
+    margin-top: 5px;
   }
   .dropdown:hover .dropdown-menu {
     display: block;
   }
   .dropdown-content {
-    position: relative; 
-    min-width: auto; 
+    position: relative;
+    min-width: auto;
   }
   .dropdown-menu a {
-    padding: 10px 15px; 
-    font-size: 16px; 
+    padding: 10px 15px;
+    font-size: 16px;
+  }
+  .footer {
+    margin-top: auto;
+    background-color: #000000;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    border-top: 0.1px solid white;
+  }
+  .footer h2 {
+    font-size: 15px;
+  }
+  .results {
+    flex: 1;
   }
 }
 
