--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #000;
+  background: linear-gradient(358deg, #373737, #000000 100px);
   height: 65px;
   border-bottom: 0.3px solid white;
 }
@@ -165,7 +165,7 @@ h1 {
 
 .footer {
   margin-top: auto;
-  background-color: #000000;
+  background: linear-gradient(358deg, #373737, #000000 100px);
   color: #fff;
   text-align: center;
   padding: 10px;
@@ -173,10 +173,7 @@ h1 {
 }
 
 .footer h2 {
-  display: grid;
-  justify-content: center;
-  align-content: center;
-  font-size: 15px;
+  font-size: 12px;
 }
 
 @media (max-width: 720px) {
@@ -191,6 +188,7 @@ h1 {
     flex-direction: column;
     align-items: flex-start;
     height: auto;
+    background: linear-gradient(358deg, #373737, #000000 100px);
   }
   .nav-menu {
     flex-direction: column;
@@ -248,14 +246,14 @@ h1 {
   }
   .footer {
     margin-top: auto;
-    background-color: #000000;
+    background: linear-gradient(358deg, #373737, #000000 100px);
     color: #fff;
     text-align: center;
     padding: 10px;
     border-top: 0.1px solid white;
   }
   .footer h2 {
-    font-size: 15px;
+    font-size: 12px;
   }
   .results {
     flex: 1;
