--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,5 @@
 $background-color: #000;
+$background: linear-gradient(358deg, #373737, #000000 100px);
 $border-color: white;
 $font-color: #fff;
 $nav-item-margin: 20px;
@@ -18,7 +19,7 @@ $mobile-background: linear-gradient(to right, #06022f, #850a33);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: $background-color;
+  background: $background;
   height: 65px;
   border-bottom: 0.3px solid $border-color;
 }
@@ -189,7 +190,7 @@ h1 {
 }
 .footer {
   margin-top: auto;
-  background-color: #000000;
+  background: $background;
   color: #fff;
   text-align: center;
   padding: 10px;
@@ -197,10 +198,7 @@ h1 {
 }
 
 .footer h2 {
-  display: grid;
-  justify-content: center;
-  align-content: center;
-  font-size: 15px;
+  font-size: 12px;
 }
 
 @media (max-width: 720px) {
@@ -216,6 +214,7 @@ h1 {
     flex-direction: column;
     align-items: flex-start;
     height: auto;
+    background: $background;
   }
 
   .nav-menu {
@@ -284,7 +283,7 @@ h1 {
   }
   .footer {
     margin-top: auto;
-    background-color: #000000;
+    background: $background;
     color: #fff;
     text-align: center;
     padding: 10px;
@@ -292,7 +291,7 @@ h1 {
   }
 
   .footer h2 {
-    font-size: 15px;
+    font-size: 12px;
   }
   .results{
     flex: 1;
